Fix align menu on issue #9

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -527,7 +527,7 @@ footer {
     }
     #menu {
         position: absolute;
-        left: 8%;
+        left: 11%;
         top: 23px;
     }
     .sidebar {
